--- a/BOKiN/View/DisasterDetailTableView/NewsCollectionViewCell/NewsCollectionViewCell.xib
+++ b/BOKiN/View/DisasterDetailTableView/NewsCollectionViewCell/NewsCollectionViewCell.xib
@@ -13,28 +13,53 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="NewsCollectionViewCell" customModule="BOKiN" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="245" height="148"/>
+            <rect key="frame" x="0.0" y="0.0" width="268" height="300"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="245" height="148"/>
+                <rect key="frame" x="0.0" y="0.0" width="268" height="300"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ニュースが入ります" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dUr-8U-KXF">
-                        <rect key="frame" x="44.5" y="63.5" width="156" height="21"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5qy-1r-4Nt">
+                        <rect key="frame" x="0.0" y="0.0" width="268" height="180"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="180" id="J96-Y1-vNQ"/>
+                        </constraints>
+                    </imageView>
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" text="redbottleredbottleredbottleredbottleredbottleredbottleredbottleredbottleredbottleredbottleredbottleredbottleredbottle" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WqT-Vi-wst">
+                        <rect key="frame" x="0.0" y="213.5" width="268" height="86.5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    </textView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dIG-f4-wOh">
+                        <rect key="frame" x="0.0" y="185" width="268" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" red="0.33532695569999998" green="0.77748870489999999" blue="0.96620899439999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="dUr-8U-KXF" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="O7T-df-bMY"/>
-                <constraint firstItem="dUr-8U-KXF" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="ruV-Rq-X9p"/>
+                <constraint firstAttribute="trailing" secondItem="5qy-1r-4Nt" secondAttribute="trailing" id="OQl-XQ-tNC"/>
+                <constraint firstAttribute="trailing" secondItem="WqT-Vi-wst" secondAttribute="trailing" id="R7F-Ub-FeU"/>
+                <constraint firstItem="WqT-Vi-wst" firstAttribute="top" secondItem="dIG-f4-wOh" secondAttribute="bottom" constant="8" symbolic="YES" id="XMW-Hx-cM5"/>
+                <constraint firstItem="dIG-f4-wOh" firstAttribute="top" secondItem="5qy-1r-4Nt" secondAttribute="bottom" constant="5" id="bze-A5-AgS"/>
+                <constraint firstAttribute="bottom" secondItem="WqT-Vi-wst" secondAttribute="bottom" id="hSa-4w-KYV"/>
+                <constraint firstItem="dIG-f4-wOh" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="ro8-vd-nPe"/>
+                <constraint firstAttribute="trailing" secondItem="dIG-f4-wOh" secondAttribute="trailing" id="uIp-m5-tLF"/>
+                <constraint firstItem="5qy-1r-4Nt" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="um6-Kk-w7H"/>
+                <constraint firstItem="WqT-Vi-wst" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="w1s-kP-1Ff"/>
+                <constraint firstItem="5qy-1r-4Nt" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="xFy-3R-UEw"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="245" height="148"/>
-            <point key="canvasLocation" x="293.60000000000002" y="110.64467766116942"/>
+            <size key="customSize" width="268" height="300"/>
+            <connections>
+                <outlet property="imageView" destination="5qy-1r-4Nt" id="GSC-Pt-j0U"/>
+                <outlet property="textView" destination="WqT-Vi-wst" id="ago-rc-9fP"/>
+                <outlet property="titleLabel" destination="dIG-f4-wOh" id="x3N-gm-fZA"/>
+            </connections>
+            <point key="canvasLocation" x="337.60000000000002" y="191.6041979010495"/>
         </collectionViewCell>
     </objects>
 </document>
