fix: disaster-new-cell

--- a/BOKiN/View/DisasterDetailTableView/DisasterNewsCell/DisasterNewsViewCell.xib
+++ b/BOKiN/View/DisasterDetailTableView/DisasterNewsCell/DisasterNewsViewCell.xib
@@ -35,7 +35,7 @@
                             <constraint firstAttribute="height" constant="45" id="0Z2-z3-IbB"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
