--- a/BOKiN/View/DisasterDetailTableView/DisasterBokinButtonCell/DisasterBokinButtonViewCell.xib
+++ b/BOKiN/View/DisasterDetailTableView/DisasterBokinButtonCell/DisasterBokinButtonViewCell.xib
@@ -25,6 +25,8 @@
                         <state key="normal" title="募金する"/>
                     </button>
                 </subviews>
+                <color key="backgroundColor" red="0.96862745100000003" green="0.75294117650000003" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="qIG-kA-qCr" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="XMS-Ka-L3z"/>
                     <constraint firstItem="qIG-kA-qCr" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="qPF-I3-ToP"/>
